--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,7 +5,7 @@
         <%= link_to 'All Products', products_path, class: 'navbar-item' %>
 
         <% Category.all.each do |category| %>
-          <%= link_to category.name, category_products_path(category), class: 'navbar-item' %>
+          <%= link_to category.name, category_path(category), class: 'navbar-item' %>
         <% end %>
       </div>
     </div>
