--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,33 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Products</h1>
+<h1 class="title">Products</h1>
 
-<!--
-<div id="products">
+<%= form_with url: search_products_path, method: :get, local: true, class: "field has-addons" do |form| %>
+  <div class="control">
+    <%= form.label :query, "Search", class: "label" %>
+    <%= form.text_field :query, value: params[:query], class: "input" %>
+  </div>
+  <div class="control">
+    <%= form.submit "Search", class: "button is-info" %>
+  </div>
+<% end %>
+
+<div class="columns is-multiline">
   <% @products.each do |product| %>
-    <%= render product %>
-    <p>
-      <%= link_to "Show this product", product %>
-    </p>
+    <div class="column is-one-quarter">
+      <div class="card">
+        <% if product.image.attached? %>
+          <%= image_tag product.image.variant(resize: "100x100"), alt: "#{product.name} image", class: "card-image" %>
+        <% else %>
+          <div class="card-image">No image available</div>
+        <% end %>
+        <div class="card-content">
+          <div class="content">
+            <%= link_to product.name, product_path(product), class: "has-text-weight-bold" %>
+            <p><%= truncate(product.description, length: 50) %></p>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
--->
-
-<%= form_with url: search_products_path, method: :get, local: true do |form| %>
-  <%= form.label :query, "Search" %>
-  <%= form.text_field :query, value: params[:query] %>
-  <%= form.submit "Search" %>
-<% end %>
-<!--<%= link_to "Search Products", search_products_path %>-->
-<% @products.each do |product| %>
-  <div>
-    <%= link_to product.name, product_path(product) %>
-  </div>
-  <div>
-  <% if product.image.attached? %>
-            <%= image_tag product.image.variant(resize: "100x100"), alt: "#{product.name} image" %>
-          <% else %>
-            No image available
-          <% end %>
-  </div>
-<% end %>
