--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -15,6 +15,7 @@
 
 <%= render 'products_list', products: @products %>
 -->
+<!--
 <% if @products.any? %>
   <div class="columns is-multiline">
     <% @products.each do |product| %>
@@ -39,5 +40,19 @@
 <% else %>
   <p>No products found.</p>
 <% end %>
+-->
 
-
+<% if(@products.count == 0)%>
+<p style = "font-size:3rem; color:red">
+No products found for: <%= params[:keywords]%>
+</p>
+<%else%>
+<p>
+Products found for: <%= params[:keywords]%>
+</p>
+<ul>
+<% @products.each do |product|%>
+<li><%= link_to product.name, product %></li>
+<%end%>
+</ul>
+<%end%>
