--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1 class="title">Products</h1>
 
+<!--
 <%= form_with url: search_products_path, method: :get, local: true, class: "field has-addons" do |form| %>
   <div class="control">
     <%= form.label :query, "Search", class: "label" %>
@@ -18,6 +19,18 @@
     <%= form.submit "Search", class: "button is-info" %>
   </div>
 <% end %>
+-->
+<div>
+  <%= form_with (url: search_products_path, method: :get, local: true) do%>
+  <div>
+    <nav>
+    <%= text_field_tag(:keywords,nil,class:"input", placeholder:"Search for products")%>
+    <%=select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}, params[:category]), prompt:"All categories"%>
+    <%=submit_tag("search")%>
+    </nav>
+    </div>
+    <%end%>
+    </div>
 
 
 <div class="columns is-multiline">
