--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -22,6 +22,7 @@
       <th></th>
     </tr>
   </thead>
+  <!--
   <tbody>
     <% @cart.each do |product_id, quantity| %>
       <% product = Product.find(product_id) %>
@@ -34,6 +35,26 @@
       </tr>
     <% end %>
   </tbody>
+  -->
+  <tbody>
+    <% @cart.each do |product_id, quantity| %>
+      <% product = Product.find(product_id) %>
+      <tr>
+        <td><%= product.name %></td>
+        <td>
+          <%= form_tag update_quantity_carts_path, method: :post do %>
+            <%= hidden_field_tag :product_id, product_id %>
+            <%= number_field_tag :quantity, quantity, min: 1, class: 'quantity-field' %>
+            <%= button_tag "Update", type: 'submit', class: 'update-button' %>
+          <% end %>
+        </td>
+        <td><%= number_to_currency(product.price) %></td>
+        <td><%= number_to_currency(product.price * quantity) %></td>
+        <td><%= link_to "Remove", remove_from_cart_carts_path(product_id: product_id), method: :post %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 </table>
 
-<%= link_to "New cart", new_cart_path %>
+<%#= link_to "New cart", new_cart_path %>
