cart_show_total

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -56,5 +56,8 @@
   </tbody>
 </table>
 </table>
+<div class="total-amount">
+  <h3>Total Amount: <%= number_to_currency(@total_amount) %></h3>
+</div>
 
 <%#= link_to "New cart", new_cart_path %>
