--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New order</h1>
 
+<!--
 <%= render "form", order: @order %>
 
 <br>
@@ -7,3 +8,48 @@
 <div>
   <%= link_to "Back to orders", orders_path %>
 </div>
+-->
+<h1>Checkout</h1>
+
+<%= form_with model: @order, local: true do |form| %>
+  <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
+
+      <ul>
+        <% @order.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.hidden_field :user_id, value: current_user.id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :address %>
+    <%= form.text_field :address, value: current_user.address %>
+  </div>
+
+  <div class="field">
+    <%= form.label :province %>
+    <%= form.text_field :province, value: current_user.province %>
+  </div>
+
+  <div class="field">
+    <%= form.label :total %>
+    <%= form.number_field :total, value: '%.2f' % (@order.total || 0), readonly: true %>
+  </div>
+
+  <!-- Add fields for other order attributes as needed, such as payment_id, status, etc. -->
+
+  <div class="actions">
+    <%= form.submit "Checkout" %>
+  </div>
+<% end %>
+
+<%= link_to 'Back', orders_path %>
+
