--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,6 +12,14 @@
           <%= link_to raw("🛒 View Cart"), carts_path, class: 'navbar-item' %>
         <% end %>
       </div>
+      <div class="navbar-end">
+        <% if user_signed_in? %>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: 'navbar-item' %>
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path, class: 'navbar-item' %>
+          <%= link_to "Sign up", new_user_registration_path, class: 'navbar-item' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </nav>
