--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -14,6 +14,7 @@
       </div>
       <div class="navbar-end">
         <% if user_signed_in? %>
+          <%= link_to "Edit Address", edit_address_path(current_user), class: 'navbar-item' %>
           <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: 'navbar-item' %>
         <% else %>
           <%= link_to "Sign in", new_user_session_path, class: 'navbar-item' %>
